Updated information on confidentiality and proprietary.

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 <p>VpnSDK is built for .NET Framework 4.6 and targets Windows 7, Windows 8 and Windows 10. Earlier versions as well as Server and ARM editions are not supported.</p>
 <p>To get started, go to the quick-start guide that shows you how to implement VpnSDK in a console application.</p>
 <h2 id="wlvpn-confidential">WLVPN Confidential</h2>
-<p>The content of this document is <strong>highly confidential</strong> and should be handled accordingly.
-The contents of this document cannot be duplicated, copied, reprinted, transferred, distributed, or loaned, in whole or in part, without the prior approval of WLVPN. </p>
-<p>This document contains confidential and proprietary information of WLVPN, and is protected under confidentiality agreements as well as the intellectual property laws of the United States and of other countries.
+<p>The content of this document is considered proprietary and should be handled accordingly.
+The contents of this document cannot be duplicated, copied, reprinted, transferred, distributed, or loaned, in whole or in part, without the prior approval of WLVPN.</p>
+<p>This document contains proprietary information for the usage of VpnSDK, and is protected under confidentiality agreements as well as the intellectual property laws of the United States and of other countries.
 No part of this document may be released, distributed, transmitted, or reproduced in any form, including by any electronic or mechanical means and by including within information storage and retrieval systems, without written permission from WLVPN.</p>
 </article>
           </div>
