Main page update. Manifest update.

--- a/v2/index.html
+++ b/v2/index.html
@@ -83,7 +83,7 @@
 <h2 id="introduction">Introduction</h2>
 <p>VpnSDK v2 provides an implementation of the WLVPN service flow (both API and VPN connectivity) through standard .NET TPL/asynchronous patterns. </p>
 <p>VpnSDK is built for .NET Framework 4.6.2-4.7.2 and targets the desktop version of Windows 7 and up.</p>
-<p>To get started, go to the quick-start guide that shows you how to use VpnSDK in a console application.</p>
+<p>A reference implementation in a GUI application can be found <a href="https://github.com/wlvpn/ExampleApp-Windows/tree/v2">here.</a></p>
 <h2 id="confidentiality">Confidentiality</h2>
 <p>The contents of this document cannot be duplicated, copied, reprinted, transferred, distributed, or loaned, in whole or in part, without the prior approval of WLVPN. </p>
 <p>This document contains confidential and proprietary information of WLVPN, and is protected under confidentiality agreements as well as the intellectual property laws of the United States and of other countries.
