--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 
 <body>
-<p>If you are using the current v2 SDK please click <a href="v2/">here</a> for the appropriate documentation.</p>
+<p>If you are using the current v2 SDK (known as VpnSDK) please click <a href="v2/">here</a> for the appropriate documentation.</p>
 
-<p>If you are using the legacy v1 package (known as VpnSDK.Whitelabel) please click <a href="v1/">here</a> for the legacy documentation.</a></p>
+<p>If you are using the legacy v1 SDK (known as VpnSDK.Whitelabel) please click <a href="v1/">here</a> for the legacy documentation.</a></p>
 
 </body>
 </html>
