--- a/v2/index.html
+++ b/v2/index.html
@@ -81,8 +81,17 @@
 <h1 id="vpnsdk-v2-net-documentation">VpnSDK v2 .NET Documentation</h1>
 
 <h2 id="introduction">Introduction</h2>
-<p>VpnSDK v2 provides an implementation of the WLVPN service flow (both API and VPN connectivity) through standard .NET TPL/asynchronous patterns. </p>
-<p>VpnSDK is built for .NET Framework 4.6.1-4.7.2 and targets the desktop version of Windows 7 and up.</p>
+<p>VpnSDK provides an implementation of the WLVPN service flow (both API and VPN connectivity) through standard .NET TPL/asynchronous patterns. </p>
+<p>VpnSDK is built for .NET Framework 4.6.1-4.7.2 and targets the desktop version of Windows 7 and up. </p>
+<p>An application built from the SDK can be run from user-space or as an elevated process (Admin). If you run from user-space, you will have limited functionality with the following features not available:</p>
+<ul>
+<li>OpenVPN protocol</li>
+<li>DNS Leak Protection</li>
+<li>IPv6 Leak Protection</li>
+<li>Allow Only VPN Connectivity (Kill Switch)</li>
+<li>Allow Lan Traffic</li>
+</ul>
+<p>If you run as an elevated process, all the features are available. </p>
 <p>A reference implementation in a GUI application can be found <a href="https://github.com/wlvpn/ExampleApp-Windows/tree/v2">here.</a></p>
 <h2 id="confidentiality">Confidentiality</h2>
 <p>The contents of this document cannot be duplicated, copied, reprinted, transferred, distributed, or loaned, in whole or in part, without the prior approval of WLVPN. </p>
@@ -113,7 +122,7 @@ No part of this document may be released, distributed, transmitted, or reproduce
               <a href="#top">Back to top</a>
             </span>
             
-            <span><b>VpnSDK v2.0.x Documentation - © 2019 WLVPN</b></span>
+            <span><b>VpnSDK v2 Documentation - © 2020 WLVPN</b></span>
           </div>
         </div>
       </footer>
