SDK v2.2.20 documentation update

--- a/v2/index.html
+++ b/v2/index.html
@@ -82,7 +82,7 @@
 
 <h2 id="introduction">Introduction</h2>
 <p>VpnSDK provides an implementation of the WLVPN service flow (both API and VPN connectivity) through standard .NET TPL/asynchronous patterns. </p>
-<p>VpnSDK is built for .NET Framework 4.6.1-4.7.2 and targets the desktop version of Windows 7 and up. </p>
+<p>VpnSDK is built for .NET Framework 4.6.1-4.7.2, .NET Standard 2.0 and targets the desktop version of Windows 7 and up. </p>
 <p>An application built from the SDK can be run from user-space or as an elevated process (Admin). If you run from user-space, you will have limited functionality with the following features not available:</p>
 <ul>
 <li>OpenVPN protocol</li>
